tests/expectations/compiler/integers/u32/max_fail.out
Error [ETYC0372008]: The value 4294967296 is not a valid `u32`
    --> compiler-test:4:22
     |
   4 |         let a: u32 = 4294967296u32;
     |                      ^^^^^^^^^^^^^
Error [ETYC0372083]: A program must have at least one transition function.
    --> compiler-test:2:9
     |
   2 | program test.aleo {
     |         ^^^^^^^^^
